<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranscoderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <acab.naiveha.upnpkino.DoubleTapImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="308dp"
                android:contentDescription="@string/cast_icon_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/stream" />

            <TextView
                android:id="@+id/media_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:lines="2"
                android:padding="0dp"
                android:text="@string/status_tap_to_select"
                android:textColor="@color/darker_grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@+id/media_file"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/loading_spinner"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:visibility="gone"
                android:elevation="10dp"
                android:src="@drawable/loading_animation"
                android:contentDescription="@string/loading_indicator_description"
                app:layout_constraintTop_toTopOf="@+id/seekBar"
                app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintEnd_toEndOf="@+id/seekBar"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/text_position"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_time"
                    android:textColor="@color/darker_grey"
                    android:textSize="12sp"
                    android:gravity="start" />

                <TextView
                    android:id="@+id/text_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_time"
                    android:textColor="@color/darker_grey"
                    android:textSize="12sp"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/controls_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/time_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/button_stop"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/stop_button_description"
                    android:focusable="true"
                    android:src="@drawable/stop_circle" />

                <ImageView
                    android:id="@+id/button_play"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/play_button_description"
                    android:focusable="true"
                    android:src="@drawable/play_circle" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/tips_message"
                android:textAlignment="center"
                android:textColor="@color/darker_grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:src="@drawable/menu"
            android:contentDescription="@string/open_menu"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?android:attr/windowBackground"
        android:clickable="true"
        android:focusable="true">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:headerLayout="@layout/nav_header"
            app:itemVerticalPadding="24dp"
            app:itemTextAppearance="@style/DrawerItemTextAppearance"
            app:menu="@menu/drawer_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/drawer_footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/drawer_footer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/version_info"
                android:textAlignment="center"
                android:textColor="@color/darker_grey"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
